Changed QAOA tutorial link

--- a/Learning2Learn.ipynb
+++ b/Learning2Learn.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "### VQAs in focus: QAOA for MaxCut\n",
     "There are multiple VQAs for which this hybrid training routine could be used, some of them directly analyzed in [[1]](#1). In the following, we will only focus on one of such examples, that is the use of the QAOA (Quantum Approximate Optimization Algorithm) for solving the MaxCut problem for graphs. Thus, referring to the picture above, the shape of the variational circuit is the one dictated by the QAOA ansatz, and such a quantum circuit is used to evaluate the cost Hamiltonian $H$ of the MaxCut problem of some graphs.  \n",
-    "If you wish to refresh your memories, check out this great tutorial on how to use QAOA for solving MaxCut: https://pennylane.ai/qml/demos/tutorial_qaoa_maxcut.html\n",
+    "If you wish to refresh your memories, check out this great tutorial on how to use QAOA for solving graph problems: https://pennylane.ai/qml/demos/tutorial_qaoa_intro.html\n",
     "\n",
     "---"
    ]
@@ -1485,6 +1485,13 @@
     "Cerezo M., Arrasmith A., Babbush R., Benjamin S. C., Endo S., Fujii K., McClean J. R., Mitarai K., Yuan X., Cincio L. and Coles P. J. (2020),  \n",
     "Variational Quantum Algorithms, [arXiv:2012.09265](https://arxiv.org/abs/2012.09265).  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
